5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4376/executions/1577_1333.log
== TEST (2019-03-21 18:14:25) 
-- CODE:
expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10 
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao =30 – 3 ** 2 + 8 // 3 ** 2 * 10 
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:15:05) 
-- CODE:
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:15:07) 
-- CODE:
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.189945
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
